# rustracer

./: .gitignore  Cargo.toml  README.md
assets/: LICENSE.txt  README.md  mazda_rx7_low.mtl  mazda_rx7_mid.mtl  roadbasic.mtl  roadscene.blend  scene.mtl
old_versions/: Cargo.toml  README.md
old_versions/src/hittable/: hittable_list.rs  sphere.rs
old_versions/src/hittable/transformations/: rotation_y.rs
old_versions/src/material/: diffuse_light.rs  metal.rs
old_versions/src/texture/: checker.rs  solid_color.rs
old_versions/src_old/: interval.rs  profiler.rs  worldconstructor.rs
old_versions/v1/: bvh.rs  ray.rs
old_versions/v2/: main.rs  pixel_buffer.rs  ray.rs  vector.rs
old_versions/v2/hittable/: base.rs
old_versions/v2/hittable/transformations/: translation.rs
old_versions/v2/material/: base.rs
old_versions/v2/texture/: base.rs
rst_render/: Cargo.toml
rst_render/examples/: triangle.rs
rst_render/src/: error.rs  lib.rs
rustracer/: Cargo.toml
rustracer/src/: main.rs
src/: aabb.rs  bvh.rs  camera.rs  currentpath.rs  hittable.rs  interval.rs  main.rs  material.rs  pixel_buffer.rs  pixelbuffer.rs  profiler.rs  random.rs  ray.rs  texture.rs  utils.rs  vector.rs  world_constructor.rs
src/application/: data_buffer.rs  init.rs  mod.rs  resize.rs  update.rs
src/hittable/: base.rs  bvh_node.rs  hittable_list.rs  quad.rs  quad_old.rs  sphere.rs
src/material/: base.rs  lambertian.rs  metal.rs
src/objects/: material.rs  mod.rs
src/shaders/: compute_shader.wgsl  data.wgsl  denoise_shader.wgsl  (+2 more)
src_old/: main.rs  texture.rs
(+23 files in other folders)
