[package]
name = "rustracer_v3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29"
wgpu = "22"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
puffin = "0.19"
puffin_http = "0.16"

[profile.release]
#debug = true

[profile.dev.package."*"]
opt-level = 1
debug = false
