[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35.2"
rand = "0.8.5"
rand_xorshift = "0.3.0"
image = "0.24.7"

[profile.dev.package."*"]
opt-level = 3

[profile.release.package."*"]
opt-level = 3
